# jekv

./: CMakeLists.txt  LICENSE  README.md
easy/: jekv_easy.c
example/: main.c
include/: jekv_base.h  jekv_easy.h
porting/: jekv_log.c  jekv_log.h  jekv_porting.h  jekv_porting_freertos.c  jekv_porting_pc.c
src/: jekv_base.c  jekv_debug.c  jekv_debug.h  jekv_handler.c  jekv_handler.h  jekv_hash.c  jekv_hash.h  jekv_item.c  jekv_item.h  jekv_iterator.c  jekv_iterator.h  jekv_partition.c  jekv_partition.h  jekv_partition_manager.c  jekv_partition_manager.h  jekv_sector.c  jekv_sector.h  jekv_sector_manager.c  jekv_sector_manager.h  jekv_storage.c  jekv_storage.h
third/: dlist.h
